Fixed the scrollbar on the strategy page and moved the script to strategy.js

--- a/front-end/pages/strategy-page/strategy.css
+++ b/front-end/pages/strategy-page/strategy.css
@@ -75,7 +75,7 @@ a:active {
 }
 
 .strategyScrollBarSide::-webkit-scrollbar-track,
-.strategyScrollBarSide::-webkit-scrollbar-track {
+.strategyScrollBarMain::-webkit-scrollbar-track {
     background: #D9D9D9;
     border-radius: 8px;
 }
@@ -92,7 +92,7 @@ a:active {
     background: #4c4c4c;
 }
 
-/* Illustration size */
+/* Illustration size and zoom */
 .strategyIllustrations img {
     width: 400px;
 }
